public/css/ui.css
/* ... */
@media only screen and (min-width: 0px) and (max-width: 768px) {
    .grid {
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: repeat(4, max-content);
    }

    #header {
        grid-column: 1 / 13;
        background-color: var(--color);
        padding: 0px 40px 20px 40px;
    }

    #header-nav {
        padding-top: 20px;
        color: white;
    }

    #about-me-nav {
        display: block;
    }

    #portfolio-nav {
        display: block;
    }

    .banner-name {
        grid-column: 1 / 13;
        font-size: 17vw;
        margin-bottom: 50px;
    }
    
    .title-grid {
        grid-column: 1 / 13;
        grid-row: 3;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
    }

    .icon {
        grid-column: 1;
        display: block;
        height: 65vw;
        width: 65vw;
        margin: auto;
        margin-top: 10vw;
    }

    .title {
        grid-column: 1;
        font-size: 14vw;
    }

    .info {
        grid-column: 1;
        font-size: 4.7vw;
    }
    
    .title.grid > * {
        grid-column: 1;
    }

    .developer.icon {
        grid-row: 1;
        font-size: 15vw;
        padding-top: 22vw;
        margin-top: 0px !important;
    }

    .developer.title {
        grid-row: 2;
    }
    
    .developer.info {
        grid-row: 3;
        padding-bottom: 7vw;
        border-bottom: solid 5px var(--light);
    }

    .musician.icon > img {
        width: 50vw;
        padding-top: 22vw;
    }

    .musician.icon:hover img {
        width: 55vw;
    }
    
    .musician.icon {
        grid-row: 4;
    }

    .musician.title {
        grid-row: 5;
    }

    .musician.info {
        grid-row: 6;
        padding-bottom: 7vw;
        border-bottom: solid 5px var(--light);
    }

    .learner.icon {
        grid-row: 7;
        font-size: 22vw;
        padding-top: 16vw;
    }

    .learner.title {
        grid-row: 8;
    }
    
    .learner.info {
        grid-row: 9;
    }

    #footer {
        font-size: 1.2em;
        padding-bottom: 20px;
    }

    .break {
        flex-basis: 100%;
        height: 0;
    }

    .header-image {
        grid-column: 1 / 13;
        grid-row: 2;
        width: 100%;
        height: 100vw;
        display: block;
        position: relative;
        background-size: contain;
        background-position: center;
        background-image: url("/images/profile/square-pic-50.webp");
        border-radius: 0%;
        box-shadow: none;
    }

    .bio {
        grid-column: 2 / 12;
    }

    .bio-paragraph {
        font-size: 1.15em;
        line-height: 1.45;
    }

    .portfolio-grid {
        margin-top: 0px;
        margin-bottom: 60px;
    }

    .portfolio-heading {
        grid-column: 1;
        text-align: center;
        font-size: 8.2vw;
        margin-bottom: 40px;
        margin-top: 60px;
        color: var(--light);
    }

    .portfolio-card {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
    }

    .portfolio-card:before {
        width: 100px;
        height: 100%;
        top: 0px;
    }
    
    .portfolio-card-head {
        grid-column: 1;
        grid-row: 1;
        text-align: center;
        font-size: 6vw;
    }
    
    .portfolio-card-pic {
        grid-column: 1;
        grid-row: 2;
        height: 45vw;
        margin-bottom: 30px;
    }
    
    .portfolio-card-desc {
        grid-column: 1;
        grid-row: 3;
        font-size: 1.15em;
    }
    
    .portfolio-card-button-holder {
        grid-column: 1;
        grid-row: 4;
        font-size: 1.3em;
        padding: 20px;
    }

    .portfolio-break {
        margin-top: 30px;
        margin-bottom: 30px;
    }
}

